DataStructuresGit/VS Code/anotacoesAulas/.metadata/.plugins/org.eclipse.cdt.ui/mallocExercicio01.build.log
15:44:57 **** Incremental Build of configuration Debug for project mallocExercicio01 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o mallocExercise.o "..\\mallocExercise.c" 
..\mallocExercise.c: In function 'main':
..\mallocExercise.c:19:26: error: expected ')' before 'sizeof'
   19 |  ptrv = (int *)malloc(100 sizeof(int));
      |                          ^~~~~~~
      |                          )
..\mallocExercise.c:17:6: warning: unused variable 'dados' [-Wunused-variable]
   17 |  int dados[100];
      |      ^~~~~

15:44:58 Build Failed. 1 errors, 1 warnings. (took 322ms)

